@@ -1,3 +1,13 @@
+2011-07-15  Andy Estes  <aestes@apple.com>
+
+        Rename applicationIsSolarWalk() to applicationIsSolarWalkMac().
+        https://bugs.webkit.org/show_bug.cgi?id=64641
+
+        Reviewed by Brian Weinstein.
+
+        * WebView/WebView.mm:
+        (needsSolarWalkQuirksScript): Call applicationIsSolarWalkMac().
+
 2011-07-15  Dan Bernstein  <mitz@apple.com>
 
         REGRESSION: Mouse cursor doesn’t hide when full screen video HUD hides
