@@ -1,3 +1,15 @@
+2011-07-15  Andy Estes  <aestes@apple.com>
+
+        Rename applicationIsSolarWalk() to applicationIsSolarWalkMac().
+        https://bugs.webkit.org/show_bug.cgi?id=64641
+
+        Reviewed by Brian Weinstein.
+
+        * WebCore.exp.in: Update to new symbol.
+        * platform/RuntimeApplicationChecks.cpp:
+        (WebCore::applicationIsSolarWalkMac): Renamed from applicationIsSolarWalk.
+        * platform/RuntimeApplicationChecks.h: Ditto.
+
 2011-07-15  Mark Rowe  <mrowe@apple.com>
 
         Fix the build.
